--- a/modify_loadbalancer.yaml
+++ b/modify_loadbalancer.yaml
@@ -636,7 +636,28 @@
             validate_certs: no
           when: manageiq_notification_url is defined
           ignore_errors: yes
+    # ========================================
+    # CREATE LISTENER
+    # ========================================
 
+        - name: Crea Listener
+          openstack.cloud.loadbalancer_listener:
+            cloud: "{{ openstack_cloud }}"
+            loadbalancer: "{{ loadbalancer_id }}"
+            name: "{{ listener_name }}"
+            protocol: "{{ listener_protocol }}"
+            protocol_port: "{{ listener_port }}"
+            description: "{{ listener_description | default(omit) }}"
+            connection_limit: "{{ listener_connection_limit | default(omit) }}"
+            timeout_client_data: "{{ listener_timeout_client_data | default(omit) }}"
+            timeout_member_connect: "{{ listener_timeout_member_connect | default(omit) }}"
+            timeout_member_data: "{{ listener_timeout_member_data | default(omit) }}"
+            timeout_tcp_inspect: "{{ listener_timeout_tcp_inspect | default(omit) }}"
+            admin_state_up: "{{ listener_admin_state | default(true) }}"
+            allowed_cidrs: "{{ listener_allowed_cidrs | default(omit) }}"
+            state: present
+          when: action == 'create_listener'
+          
     # ========================================
     # FINAL SUMMARY
     # ========================================
